@@ -68,18 +68,42 @@
 
     <records interface="plone.app.querystring.interfaces.IQueryOperation"
              prefix="plone.app.querystring.operation.date.lessThanRelativeDate">
-        <value key="title" i18n:translate="">More recently than</value>
-        <value key="description"></value>
+        <value key="title" i18n:translate="">Within next</value>
+        <value key="description" i18n:translate="">Please enter the number in days.</value>
         <value key="operation">plone.app.querystring.queryparser._lessThanRelativeDate</value>
-        <value key="widget">DateWidget</value>
+        <value key="widget">RelativeDateWidget</value>
     </records>
 
     <records interface="plone.app.querystring.interfaces.IQueryOperation"
              prefix="plone.app.querystring.operation.date.largerThanRelativeDate">
-        <value key="title" i18n:translate="">Older than</value>
+        <value key="title" i18n:translate="">Within last</value>
         <value key="description" i18n:translate="">Please enter the number in days.</value>
         <value key="operation">plone.app.querystring.queryparser._moreThanRelativeDate</value>
-        <value key="widget">DateWidget</value>
+        <value key="widget">RelativeDateWidget</value>
+    </records>
+
+    <records interface="plone.app.querystring.interfaces.IQueryOperation"
+             prefix="plone.app.querystring.operation.date.today">
+        <value key="title" i18n:translate="">Today</value>
+        <value key="description" i18n:translate="">The current day</value>
+        <value key="operation">plone.app.querystring.queryparser._today</value>
+        <value key="widget"></value>
+    </records>
+
+    <records interface="plone.app.querystring.interfaces.IQueryOperation"
+             prefix="plone.app.querystring.operation.date.afterToday">
+        <value key="title" i18n:translate="">After today</value>
+        <value key="description" i18n:translate="">After the current day</value>
+        <value key="operation">plone.app.querystring.queryparser._afterToday</value>
+        <value key="widget"></value>
+    </records>
+
+    <records interface="plone.app.querystring.interfaces.IQueryOperation"
+             prefix="plone.app.querystring.operation.date.beforeToday">
+        <value key="title">Before today</value>
+        <value key="description" i18n:translate="">Before the current day</value>
+        <value key="operation" i18n:translate="">plone.app.querystring.queryparser._beforeToday</value>
+        <value key="widget"></value>
     </records>
 
     <records interface="plone.app.querystring.interfaces.IQueryOperation"
@@ -200,6 +224,9 @@
            <element>plone.app.querystring.operation.date.between</element>
            <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
            <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+           <element>plone.app.querystring.operation.date.today</element>
+           <element>plone.app.querystring.operation.date.beforeToday</element>
+           <element>plone.app.querystring.operation.date.afterToday</element>
        </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
@@ -241,6 +268,9 @@
             <element>plone.app.querystring.operation.date.between</element>
             <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
             <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+            <element>plone.app.querystring.operation.date.today</element>
+            <element>plone.app.querystring.operation.date.beforeToday</element>
+            <element>plone.app.querystring.operation.date.afterToday</element>
         </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
@@ -258,7 +288,7 @@
 
     <records interface="plone.app.querystring.interfaces.IQueryField"
              prefix="plone.app.querystring.field.end">
-        <value key="title" i18n:translate="">End date</value>
+        <value key="title" i18n:translate="">Event end date</value>
         <value key="description" i18n:translate="">The end date and time of an event</value>
         <value key="enabled">True</value>
         <value key="sortable">True</value>
@@ -268,6 +298,9 @@
             <element>plone.app.querystring.operation.date.between</element>
             <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
             <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+            <element>plone.app.querystring.operation.date.today</element>
+            <element>plone.app.querystring.operation.date.beforeToday</element>
+            <element>plone.app.querystring.operation.date.afterToday</element>
         </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
@@ -336,6 +369,9 @@
             <element>plone.app.querystring.operation.date.between</element>
             <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
             <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+            <element>plone.app.querystring.operation.date.today</element>
+            <element>plone.app.querystring.operation.date.beforeToday</element>
+            <element>plone.app.querystring.operation.date.afterToday</element>
         </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
@@ -352,6 +388,9 @@
             <element>plone.app.querystring.operation.date.between</element>
             <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
             <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+            <element>plone.app.querystring.operation.date.today</element>
+            <element>plone.app.querystring.operation.date.beforeToday</element>
+            <element>plone.app.querystring.operation.date.afterToday</element>
         </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
@@ -419,6 +458,9 @@
             <element>plone.app.querystring.operation.date.between</element>
             <element>plone.app.querystring.operation.date.lessThanRelativeDate</element>
             <element>plone.app.querystring.operation.date.largerThanRelativeDate</element>
+            <element>plone.app.querystring.operation.date.today</element>
+            <element>plone.app.querystring.operation.date.beforeToday</element>
+            <element>plone.app.querystring.operation.date.afterToday</element>
         </value>
        <value key="group" i18n:translate="">Dates</value>
     </records>
